# helion-vm

./: CMakeLists.txt  README.md  instr_doc.txt  used_libraries.txt
compiler/: script_comp.py  test.helis
include/interpreter/: instr_except.hpp  instr_func.hpp  instr_parser.hpp  instr_runner.hpp  instr_type.hpp
include/interpreter/script/: invokable.hpp  linker.hpp  script.hpp  script_parser.hpp
include/memory/: mem_except.hpp  mem_mapping.hpp  mem_types.hpp
include/util/: env_util.hpp  mem_util.hpp  string_util.hpp  term_colors.hpp  value_util.hpp
src/: CMakeLists.txt  test_main.cpp
src/apps/: instr_inter.cpp  prog_inter.cpp
src/interpreter/: instr_func.cpp  instr_parser.cpp  instr_runner.cpp  instr_type.cpp
src/interpreter/script/: invokable.cpp  linker.cpp  script.cpp  script_parser.cpp
src/memory/: mem_mapping.cpp  mem_types.cpp
src/util/: env_util.cpp  mem_util.cpp  string_util.cpp  value_util.cpp
test/: CMakeLists.txt
test/interpreter/: test_instr_parser.cpp
test/interpreter/validation_scripts/: test_invalid_1.heli  test_invalid_2.heli  test_invalid_3.heli  test_valid.heli
test/memory/: test_mem_mapping.cpp  test_mem_types.cpp  test_mem_util.cpp
test/util/: test_string_util.cpp  test_value_util.cpp
test_adder_program/: test_prog.helip
test_adder_program/scripts/: add_and_split.heli  add_and_split.helidef  add_inputs.heli  add_inputs.helidef  create_initial.heli  create_initial.helidef  split.heli  split.helidef
